--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sharp": "^4.13.0",
     "gatsby-remark-images": "^6.13.0",
     "gatsby-source-filesystem": "^4.13.0",
+    "gatsby-transformer-json": "^4.14.0",
     "gatsby-transformer-remark": "^5.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
     "node-sass": "^6.0.1",
