--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.8.1",
     "@mui/styles": "^5.8.0",
     "gatsby": "^4.13.0",
+    "gatsby-plugin-feed": "^4.21.0",
     "gatsby-plugin-gatsby-cloud": "^4.13.0",
     "gatsby-plugin-image": "^2.13.0",
     "gatsby-plugin-manifest": "^4.13.0",
@@ -23,6 +24,8 @@
     "gatsby-transformer-json": "^4.14.0",
     "gatsby-transformer-remark": "^5.13.0",
     "gatsby-transformer-sharp": "^4.13.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "node-sass": "^6.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
@@ -30,6 +33,12 @@
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.6.2"
   },
   "keywords": [
