add audio player

--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,5 @@
-{
-  "arrowParens": "always",
-  "semi": true,
-  "trailingComma": "all"
-}
+// {
+//   "arrowParens": "always",
+//   "semi": true,
+//   "trailingComma": "all"
+// }
