--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-transformer-sharp": "^4.13.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "moment-duration-format": "^2.3.2",
     "node-sass": "^6.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
