--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "moment": "^2.29.4",
     "moment-duration-format": "^2.3.2",
     "node-sass": "^6.0.1",
+    "path": "^0.12.7",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "url-join": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
